add to index.html in master

--- a/index.html
+++ b/index.html
@@ -10,40 +10,40 @@
 </head>
 <body>
     <main>
-        <section class="screen">
-            <div class="container">
-                <div class="card"> hej
+        <section class="screen"> <!--this is a block-->
+            <div class="container container__elem1"> <!--this is an element?-->
+                <div class="card"> <!--this is a block? is it moveable? yes bc it's the same in the other containers?-->
                 </div>
-                <div class="card"> hej
+                <div class="card">
                 </div>
-                <div class="card"> hallå
+                <div class="card">
+                </div>
+            </div>
+            <div class="container container__elem2">
+                <div class="card">
+                </div>
+                <div class="card">
+                </div>
+                <div class="card">
+                </div>
+            </div>
+            <div class="container container__elem3">
+                <div class="card"> 
+                </div>
+                <div class="card"> 
+                </div>
+                <div class="card"> 
                 </div>
             </div>
             <div class="container">
-                <div class="card"> hej
+                <div class="card">
                 </div>
-                <div class="card"> hej
+                <div class="card">
                 </div>
-                <div class="card"> hallå
-                </div>
-            </div>
-            <div class="container">
-                <div class="card one"> hej
-                </div>
-                <div class="card two"> hej
-                </div>
-                <div class="card three"> hallå
+                <div class="card last">
                 </div>
             </div>
-            <div class="container">
-                <div class="card one"> hej
-                </div>
-                <div class="card two"> hej
-                </div>
-                <div class="card three"> hallå
-                </div>
-            </div>
-            <div class="container">
+            <div class="container"> 
                 <div class="card one"> hej
                 </div>
                 <div class="card two"> hej
