--- a/index.html
+++ b/index.html
@@ -10,53 +10,54 @@
 </head>
 <body>
     <main>
+<!--I am just not getting the BEM tree structure and naming-->
         <section class="screen">
-            <div class="container">
-                <div class="card"> hej
+            <div class="container container__elem1">
+                <div class="card"> 
                 </div>
-                <div class="card"> hej
+                <div class="card"> 
                 </div>
-                <div class="card"> hallå
+                <div class="card"> 
+                </div>
+            </div>
+            <div class="container container__elem2">
+                <div class="card"> 
+                </div>
+                <div class="card"> 
+                </div>
+                <div class="card"> 
+                </div>
+            </div>
+            <div class="container container__elem3">
+                <div class="card one"> 
+                </div>
+                <div class="card two"> 
+                </div>
+                <div class="card three"> 
+                </div>
+            </div>
+            <div class="container container__elem4">
+                <div class="card one"> 
+                </div>
+                <div class="card two"> 
+                </div>
+                <div class="card three">
                 </div>
             </div>
             <div class="container">
-                <div class="card"> hej
+                <div class="card one"> Some text
                 </div>
-                <div class="card"> hej
+                <div class="card two"> Some text
                 </div>
-                <div class="card"> hallå
-                </div>
-            </div>
-            <div class="container">
-                <div class="card one"> hej
-                </div>
-                <div class="card two"> hej
-                </div>
-                <div class="card three"> hallå
+                <div class="card three"> Some text
                 </div>
             </div>
             <div class="container">
-                <div class="card one"> hej
+                <div class="card one"> 
                 </div>
-                <div class="card two"> hej
+                <div class="card two"> 
                 </div>
-                <div class="card three"> hallå
-                </div>
-            </div>
-            <div class="container">
-                <div class="card one"> hej
-                </div>
-                <div class="card two"> hej
-                </div>
-                <div class="card three"> hallå
-                </div>
-            </div>
-            <div class="container">
-                <div class="card one"> hej
-                </div>
-                <div class="card two"> hej
-                </div>
-                <div class="card three"> hallå
+                <div class="card three"> 
                 </div>
             </div>
         </section>
